# finlake

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  main.py  pyproject.toml  pyspark_k8s_setup.md
.github/workflows/: docker.yml
airflow/: Dockerfile  airflow-k8s.yaml  requirements.txt
airflow/dags/: finlake_iceberg_spark_dag.py  sample_dag.py
ingress/: AKS_NGINX_Ingress_Setup_and_Troubleshooting_Guide.md  airflow-ingress.yaml
k8s/: minIO.yaml  nessie.yaml  posgresql.yaml
local/: deployment.yaml
spark/: Dockerfile  entrypoint.sh  requirements.txt  spark-k8s.yaml  spark-rbac.yaml
spark/jobs/: iceberg_transactions_job.py  sample_job.py
